trunk/Archive2/bd/c46d3a12a48c32/output
main.cpp: In function 'int main()':
main.cpp:7:5: error: 'vector2121' is not a member of 'std'
     std::vector2121<int> haystack {1, 3, 4, 5, 9};
     ^
main.cpp:7:21: error: expected primary-expression before 'int'
     std::vector2121<int> haystack {1, 3, 4, 5, 9};
                     ^
main.cpp:8:5: error: 'vector2122' is not a member of 'std'
     std::vector2122<int> needles {1, 2, 3};
     ^
main.cpp:8:21: error: expected primary-expression before 'int'
     std::vector2122<int> needles {1, 2, 3};
                     ^
main.cpp:10:24: error: 'needles' was not declared in this scope
     for (auto needle : needles) {
                        ^
main.cpp:11:9: error: 'cout2123' is not a member of 'std'
         std::cout2123 << "Searching for " << needle << '\n';
         ^
main.cpp:12:32: error: 'haystack' was not declared in this scope
         if (std::binary_search(haystack.begin(), haystack.end(), needle)) {
                                ^
main.cpp:13:13: error: 'cout2124' is not a member of 'std'
             std::cout2124 << "Found " << needle << '\n';
             ^
main.cpp:15:13: error: 'cout2125' is not a member of 'std'
             std::cout2125 << "no dice!\n";
             ^
